<?xml version="1.0"?>
<package format="2">
  <name>dubins_path_sampler</name>
  <version>0.0.0</version>
  <description>The dubins_path_creator package</description>

  <maintainer email="dominik.kleiser@iosb.fraunhofer.de">Dominik Kleiser</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
